# SmartJobMonitor

./: .env.sample  .gitignore  Makefile  README.md  channels_map.json  docker-compose.observability.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-prod.yml
alembic/: env.py
alembic/versions/: b1a2c3d4e5f6_skills_replace_languages.py  cce3ae0cbc82_init.py  e434c0b6ae91_user.py
app/: main.py
app/bootstrap/: __init__.py  bootstrap.py  models.py  shutdown.py  supervisor.py
app/core/: config.py  logger.py
app/infrastructure/: llm.py  llm_provider.py  sentry.py
docs/deploy/: production.md
grafana/dashboards/: functional_overview.json  job_monitor.json  system_overview.json
migrations/: env.py
migrations/versions/: 1ca1aaca3f85_.py  31ccfc502e51_.py  3a1007d2d014_del_reason.py  3f149b912ac8_.py  5d9c11501e4a_ыфв.py  82f0acbc75e0_new.py  9e4cedcc38fd_.py  ab5dd1caa19b_2.py  b8f838cc6b3c_.py  cb0a0beda94c_.py  d4b21dbddcd2_1.py  d6a57e07cdea_add_match.py  e2c1b0f7a5c1_add_user_is_active.py
prometheus/: prometheus.yml
scripts/: check.ps1
src/: scrapper.py
src/agents/: analyzer.py  match.py  parser.py  resume.py  vacancy.py
src/bot/: handlers.py  main.py  notifier.py  scrapper.py
src/core/: config.py  db.py  logger.py  tkq.py
src/infrastructure/: config.py  db.py  exceptions.py  llm_provider.py  logger.py  metrics.py  sentry.py  shemas.py  tkq.py
src/models/: match.py  user.py  vacancy.py
src/schemas/: user.py  (+1 more)
test/: conftest.py
tests/: conftest.py
(+130 files in other folders)
